Flukes Release Notes:
---------------------
02/25/15:
- Added support for new-style stitchport definitions

02/20/15:
- Updated semantic verification ruleset in NDL Commons

02/03/15:
- Fixes for storage properties loaded from previously saved request file

12/2/14:
- Fixed long standing image name bug in manifest display

09/08/14:
- Separated BC provider into a JNLP extension

09/05/14:
- Moved to 5.0 ORCA artifacts

08/22/14:
- Added the ability to query for node unit properties (to e.g. get the boot console)

07/22/14:
- Trim user-provided properties to ensure no extra whitespaces

06/18/14:
- Added TAMU, WSU, UMass, UAF and PSC

03/31/14:
- Added NCSU2 net

03/05/14:
- Added WVN, NCSU, NCSU2 racks

02/26/14:
- Updated to support fixes to CH API

02/19/14:
- Added support for Federation Slice authority and GENI Portal (see Help)

02/13/14:
- Updated path search algorithm

1/28/14:
- Enabled support for color extension

11/15/13:
- Renamed SL to starlight to support SL site

11/15/13:
- Modified to support broadcast connections with common links

10/17/13:
- Added new racks (UFL, SL, OSF, UCD)

10/10/13:
- Added explicit 'No dependencies' option to node dependencies field

08/30/13:
- Added support for multicast domains

07/30/13:
- Added storage parameterization
- Added sudo option on second account

07/16/13:
- Added support for storage request and manifests

06/24/13:
- Added direct support for .pem/.crt/.key credentials without intervening .jks 

06/16/13:
- Added user cert validity check

06/03/13:
- Updated the list of known sites

05/28/13:
- Added support for additional SSH public keys

05/23/13:
- Added mac addresses to displayed properties

05/21/13:
- Added support for image registry

05/01/13:
- Added support for stitch port manifest 

04/30/13:
- Added support for stitching port requests

04/02/13:
- Added experimental support for automatic IP address assignment

03/18/13:
- Shortened names of links in inter-domain cases

03/13/13:
- Added NCSU site